--- a/chat_app/pubspec.yaml
+++ b/chat_app/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   intl: ^0.18.1
   shared_preferences: any
   url_launcher: ^6.1.14
+  google_fonts: ^5.1.0
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +69,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+    - asset/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
